--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@ body, html {
 	font-family: 'Montserrat', sans-serif;
 	background-image: url(../img/bg.jpg);
 	background-size: cover;
+	background-attachment: fixed;
 	color: rgba(255,255,255,0.8);
 }
 header {
